Documentation: Add bcmath and soap PHP extensions to requirements list

--- a/public/documentation/installation_guide.html
+++ b/public/documentation/installation_guide.html
@@ -30,6 +30,7 @@ This version of Chamilo requires the following software stack.
   </ul>
   Within PHP, Chamilo requires or benefits from the following extensions:
   <ul>
+      <li>bcmath</li>
       <li>curl</li>
       <li>exif</li>
       <li>gd</li>
@@ -41,6 +42,7 @@ This version of Chamilo requires the following software stack.
       <li>opcache</li>
       <li>pcre</li>
       <li>session (php-session, usually shipped with PHP)</li>
+      <li>soap</li>
       <li>xml</li>
       <li>zip</li>
       <li>zlib</li>
