--- a/public/documentation/installation_guide.html
+++ b/public/documentation/installation_guide.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-<h1>Chamilo installation guide</h1>
+<h1>Chamilo 2 installation guide</h1>
   <p>
       This is the official Chamilo installation guide for version 2+.
   </p>
@@ -27,6 +27,7 @@ This version of Chamilo requires the following software stack.
       <li>Apache 2.4+</li>
       <li>MariaDB 10+ or MySQL 5+</li>
       <li>PHP 8.2+</li>
+      <li>A local Redis server (optional)</li>
   </ul>
   Within PHP, Chamilo requires or benefits from the following extensions:
   <ul>
@@ -47,6 +48,7 @@ This version of Chamilo requires the following software stack.
       <li>zip</li>
       <li>zlib</li>
       <li>ldap (optional)</li>
+      <li>redis (optional)</li>
       <li>xapian (optional)</li>
   </ul>
   <h2>Web-panel installation</h2>
@@ -58,8 +60,37 @@ This version of Chamilo requires the following software stack.
   Define a new virtual host/subdomain name you will use for Chamilo (Chamilo 2 does *not* work as a sub-folder of an existing website, you need a subdomain like "elearning.yourdomain.com").<br>
   Upload and/or unzip your Chamilo files inside your web folder (usually inside a folder called "public_html/").<br>
   Configure a virtual host pointing at the "public" directory inside your Chamilo directory. For example, this could be "/home/elearning.yourdomain.com/public_html/chamilo2/public/".<br>
+  <h3>Files permissions</h3>
+  Make sure the following files and folders are writeable by the web server. Set permissions to 0770 for example:
+  <ul>
+      <li>var/</li>
+      <li>config/</li>
+      <li>.env</li>
+  </ul>
+  The .env is the *file* where Chamilo will write the data collected during the installation.<br>
+  You can create an empty file called ".env" at the root of your Chamilo folder
+  ("/home/elearning.yourdomain.com/public_html/chamilo2/.env" in the example above),
+  or temporarily give write permissions to the web server on the entire Chamilo folder
+  ("/home/elearning.yourdomain.com/public_html/chamilo2/"). If you do the whole folder,
+  don't forget to write down the permissions it had initially, and return it to its original
+  permissions when the installation is over.
+  <h3>PHP settings</h3>
+  Some PHP settings are recommended, but the default values should be enough to get you started.<br>
+  If you prefer to set them previously, here are the settings to change:
+  <ul>
+      <li><a href="https://php.net/manual/ref.errorfunc.php#ini.display-errors">display_errors</a> off</li>
+      <li><a href="https://php.net/manual/ini.core.php#ini.file-uploads">file_uploads</a> on</li>
+      <li><a href="https://php.net/manual/ref.session.php#ini.session.auto-start">session.auto_start</a> off</li>
+      <li><a href="https://php.net/manual/ini.core.php#ini.short-open-tag">short_open_tag</a> off</li>
+      <li><a href="https://www.php.net/manual/en/session.configuration.php#ini.session.cookie-httponly">session.cookie_httponly</a> on</li>
+      <li><a href="https://php.net/manual/ini.core.php#ini.upload-max-filesize">upload_max_filesize</a> >100M</li>
+      <li><a href="https://php.net/manual/ini.core.php#ini.post-max-size">post_max_size</a> >100M</li>
+      <li><a href="https://www.php.net/manual/en/ini.core.php#ini.memory-limit">memory_limit</a> >128M</li>
+  </ul>
   <h3>Installation wizard</h3>
   You are ready to go. Open your browser on your subdomain (elearning.yourdomain.com in the example above), keep your database credentials at hand, and let the Chamilo installer guide you.
+  <h3>Sessions and Redis</h3>
+  In this alpha version, there are known issues with sessions not getting updated fast enough, which can be solved (temporarily) by using a Redis server. Check the command line instructions for more about this. This is a temporary situation that we expect to fix before the stable release.
   <h2>Command line installation</h2>
   <h3>Database</h3>
 You will need a database user with privilege to fully use (and optionally create) a database.<br>
@@ -81,7 +112,9 @@ where:
 </ul>
   <h3>Web server</h3>
 Chamilo 2+ only requires a working web server setup to work. You can run it on localhost with the default installation of any web server, provided you configure your DocumentRoot as the path pointing to Chamilo's <em>public/</em> subfolder.<br>
-Here is a minimal example Apache vhost configuration file for an installation on the http://my.chamilo.local/ URL (replace all values between brackets, including the brackets, to your custom values):
+Here is an example Apache vhost configuration file for an installation on the http://my.chamilo.local/ URL (replace all values between brackets, including the brackets, to your custom values).<br>
+It includes PHP settings which will only affect this vhost. If you prefer to set those PHP settings in php.ini, you are welcome to do so.<br>
+We also assume you will be using a default Redis installation to manage sessions (see notes in the web panel install section).<br>
   <pre>
 &lt;VirtualHost *:80&gt;
     ServerAdmin [your-email]
@@ -92,6 +125,16 @@ Here is a minimal example Apache vhost configuration file for an installation on
     CustomLog /var/log/apache2/[my.chamilo.local]-access.log combined
     DirectoryIndex index.php index.html
     Options Indexes FollowSymLinks
+    php_value display_errors Off
+    php_value file_uploads On
+    php_value session.auto_start Off
+    php_value short_open_tag Off
+    php_value session.cookie_httponly On
+    php_value upload_max_filesize 100M
+    php_value post_max_size 100M
+    php_value memory_limit 128M
+    php_value session.save_handler "redis"
+    php_value session.save_path "tcp://127.0.0.1:6379"
 &lt;/VirtualHost&gt;
   </pre>
 After setting up this virtual host, don't forget to enable it (example here on Debian/Ubuntu's command line):
@@ -99,6 +142,23 @@ After setting up this virtual host, don't forget to enable it (example here on D
       a2ensite [my.chamilo.local]
       systemctl reload apache2
   </pre>
+    <h3>Files permissions</h3>
+    Make sure the following files and folders are writeable by the web server. Set permissions to 0770 for example:
+    <ul>
+        <li>var/</li>
+        <li>config/</li>
+        <li>.env</li>
+    </ul>
+    Assuming your web server user is <em>www-data</em>, you can do that quickly with the following from inside the Chamilo root directory:
+    <pre>
+        sudo touch .env
+        sudo chown -R www-data:www-data var/ config/ .env
+    </pre>
+    <h3>PHP settings</h3>
+    Some PHP settings are recommended, but the default values should be enough to get you started.<br>
+    See vhost config's "php_value" section above for details.
+    <pre>
+    </pre>
   <h3>Installation wizard</h3>
   You should now be able to direct your browser to your URL (e.g. <em>[http://my.chamilo.local]</em>).<br>
   Chamilo will pick it up from there and offer the installation wizard to help guide you through the rest of the process.
