--- a/public/documentation/installation_guide.html
+++ b/public/documentation/installation_guide.html
@@ -9,10 +9,12 @@
     <style>
         body {width:90%; margin-left: 5%; margin-right: 5%;}
         h1 {font-size: xxx-large; margin-top: 1em; margin-bottom: 1em;}
-        h2 {margin-top: 1em;}
+        h2 {font-size: xx-large; margin-top: 1em; margin-bottom: 1em;}
+        h3 {margin-top: 1em; margin-bottom: 1em;}
         p {margin-bottom: 0.5em; margin-top: 0.5em;}
-        ul {list-style-type: circle; margin-left: 1em;}
+        ul {list-style-type: circle; margin-left: 1em; margin-top: 0.5em; margin-bottom: 0.8em;}
         table {margin: 1em;}
+        pre {border: 1px solid #333; background-color: #bbb; padding: 0.8em;}
     </style>
 </head>
 <body>
@@ -29,7 +31,7 @@ This version of Chamilo requires the following software stack.
       <li>PHP 8.2+</li>
       <li>A local Redis server (optional)</li>
   </ul>
-  Within PHP, Chamilo requires or benefits from the following extensions:
+  Within PHP, Chamilo requires or benefits from the following extensions:<br/>
   <ul>
       <li>bcmath</li>
       <li>curl</li>
@@ -89,20 +91,45 @@ This version of Chamilo requires the following software stack.
   </ul>
   <h3>Installation wizard</h3>
   You are ready to go. Open your browser on your subdomain (elearning.yourdomain.com in the example above), keep your database credentials at hand, and let the Chamilo installer guide you.
+
   <h3>Sessions and Redis</h3>
   In this alpha version, there are known issues with sessions not getting updated fast enough, which can be solved (temporarily) by using a Redis server. Check the command line instructions for more about this. This is a temporary situation that we expect to fix before the stable release.
+
   <h2>Command line installation</h2>
+
+  <h3>Software stack</h3>
+
+<p>Assuming you are using a dedicated Ubuntu 24.04 LTS, these commands should help you have the software stack installed in a breeze. Otherwise, please review the requirements above and make sure they are met before moving on to the next section.</p>
+<pre>
+sudo -s
+apt update && apt -y upgrade
+apt -y install apache2 libapache2-mod-php8.3 mariadb-client mariadb-server redis-server php8.3-{bcmath,curl,exif,gd,iconv,intl,json,mbstring,mysql,opcache,pcre,soap,xml,zip,zlib,redis}
+cd /var/www/
+mkdir chamilo
+wget https://github.com/chamilo/chamilo-lms/releases/download/v2.0.0-alpha.1/chamilo2.0.0-alpha.1.tar.gz
+# about 400MB
+tar zxf chamilo2.0.0-alpha.1.tar.gz
+rm chamilo2.0.0-alpha.1.tar.gz
+cd chamilo
+touch .env
+chown -R www-data: var config .env
+mysql -u root -e "GRANT ALL PRIVILEGES ON chamilo.* TO chamilo@localhost IDENTIFIED BY '[choose a password here]'";
+mysql -u root -e "FLUSH PRIVILEGES;"
+mysql_secure_installation
+# give a MariaDB root password twice and answer the default "Y" to anything else. The root password is *not* the one you gave above here.
+</pre>
+
   <h3>Database</h3>
-You will need a database user with privilege to fully use (and optionally create) a database.<br>
+
+<p>You will need a database user with privilege to fully use (and optionally create) a database.<br>
 Although progress has been made to support multiple database management systems, Chamilo
 currently only supports MariaDB and MySQL.<br>
-Setup a new user in your database system either through visual tools or directly in the terminal:<br>
+Setup a new user in your database system either through visual tools or directly in the terminal. If you have followed the command lines above, you can skip this.<br>
+</p>
   <pre>
-      mysql> GRANT ALL PRIVILEGES ON [db-name].* TO [db-user]@[db-host] IDENTIFIED BY '[db-password]';
-      mysql> FLUSH PRIVILEGES;
-      mysql> CREATE DATABASE [db-name];
-      mysql> exit;
-  </pre>
+mysql> GRANT ALL PRIVILEGES ON [db-name].* TO [db-user]@[db-host] IDENTIFIED BY '[db-password]';
+mysql> FLUSH PRIVILEGES;
+mysql> exit;</pre>
 where:
 <ul>
     <li>[db-name] is the name of your database</li>
@@ -116,6 +143,8 @@ Here is an example Apache vhost configuration file for an installation on the ht
 It includes PHP settings which will only affect this vhost. If you prefer to set those PHP settings in php.ini, you are welcome to do so.<br>
 We also assume you will be using a default Redis installation to manage sessions (see notes in the web panel install section).<br>
   <pre>
+cd /etc/apache2/sites-available
+vim [my.chamilo.local].conf
 &lt;VirtualHost *:80&gt;
     ServerAdmin [your-email]
     ServerName [my.chamilo.local]
@@ -139,8 +168,8 @@ We also assume you will be using a default Redis installation to manage sessions
   </pre>
 After setting up this virtual host, don't forget to enable it (example here on Debian/Ubuntu's command line):
   <pre>
-      a2ensite [my.chamilo.local]
-      systemctl reload apache2
+a2ensite [my.chamilo.local]
+systemctl reload apache2
   </pre>
     <h3>Files permissions</h3>
     Make sure the following files and folders are writeable by the web server. Set permissions to 0770 for example:
@@ -149,10 +178,10 @@ After setting up this virtual host, don't forget to enable it (example here on D
         <li>config/</li>
         <li>.env</li>
     </ul>
-    Assuming your web server user is <em>www-data</em>, you can do that quickly with the following from inside the Chamilo root directory:
+    Assuming your web server user is <em>www-data</em>, you can do that quickly with the following from inside the Chamilo root directory (already done in first example commands list for Ubuntu):
     <pre>
-        sudo touch .env
-        sudo chown -R www-data:www-data var/ config/ .env
+sudo touch .env
+sudo chown -R www-data:www-data var/ config/ .env
     </pre>
     <h3>PHP settings</h3>
     Some PHP settings are recommended, but the default values should be enough to get you started.<br>
