Security: Prevent directory indexing globally (no reason to enable it for web requests) - refs BT#22085

--- a/documentation/installation_guide.html
+++ b/documentation/installation_guide.html
@@ -773,6 +773,9 @@ If you have issues with files taking a long time to download, make sure you reco
   <Files "web.config">
     Require all denied
   </Files>
+  <IfModule mod_autoindex.c>
+    Options -Indexes
+  </IfModule>
     </pre>
 
     <h4>Special note on sharing questions between courses</h4>
@@ -872,6 +875,7 @@ If you have issues with files taking a long time to download, make sure you reco
     deny all;
     return 403;
   }
+  autoindex off;
     </pre>
 
     <h3>Apple on OS X servers</h3>
