Documentation: Update installation guides: Fix outdated links

--- a/documentation/installation_guide.html
+++ b/documentation/installation_guide.html
@@ -157,7 +157,7 @@ This guide only covers these 2 last methods. For other methods, you can always a
 <br /><br />
     To install, follow these 6 simple steps:
 <ol>
-  <li><a href="https://chamilo.org/chamilo-lms/">Download Chamilo LMS</a></li>
+  <li><a href="https://chamilo.org/download/">Download Chamilo LMS</a></li>
   <li>Unzip it</li>
   <li>Copy the Chamilo directory in your web server's root directory. This can be
     <span style="font-weight: bold;">C:\xampp\htdocs\</span> on a Windows server or <span style="font-weight: bold;">/var/www/html/chamilo</span> (or /var/www/chamilo/) on a Linux server (You need to create the folder "chamilo")</li>
