--- a/documentation/installation_guide_es_ES.html
+++ b/documentation/installation_guide_es_ES.html
@@ -196,7 +196,7 @@ Una vez configurada esta parte (que quizás ya esté configurada por su proveedo
 </p>
 Para instalar, sigue estos sencillos 6 pasos:
 <ol>
-  <li><a href="https://chamilo.org/es/chamilo-lms/">Descargar Chamilo LMS</a></li>
+  <li><a href="https://chamilo.org/download/">Descargar Chamilo LMS</a></li>
   <li>Descomprimirlo.</li>
   <li>
     Copiar el directorio de Chamilo en su directorio web de Apache. Este puede ser
@@ -419,7 +419,7 @@ date.timezone = 'America/New_York'
     </li>
     <li>
       Descargar el paquete de instalación de Chamilo 1.11 desde la
-      <a href="https://chamilo.org/es/chamilo-lms/">página de descarga de Chamilo</a>
+      <a href="https://chamilo.org/download/">página de descarga de Chamilo</a>
     </li>
     <li>
       Descomprimir los nuevos archivos de Chamilo 1.11 sobre los archivos de la versión anterior
@@ -444,7 +444,7 @@ date.timezone = 'America/New_York'
   </li>
   <li>
     Descargue el paquete de instalación de Chamilo 1.11 desde la
-    <a href="https://chamilo.org/es/chamilo-lms/">página de descarga de Chamilo</a>
+    <a href="https://chamilo.org/download/">página de descarga de Chamilo</a>
   </li>
   <li>
     Descomprima los nuevos ficheros de Chamilo 1.11 sobre los ficheros de la antigua versión
@@ -503,7 +503,7 @@ Este script se proporciona sin garantía. Por favor * siempre * realice una copi
   </li>
   <li>
     Descargue el paquete de instalación de Chamilo 1.11 desde la
-    <a href="https://chamilo.org/es/chamilo-lms/">página de descarga de Chamilo</a>
+    <a href="https://chamilo.org/download/">página de descarga de Chamilo</a>
   </li>
   <li>
     Descomprima los nuevos ficheros de Chamilo 1.11 sobre los ficheros de la antigua versión ( o descomprima en una
