Documentation: Update changelog for 1.11.28

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -220,6 +220,8 @@
         <h3>Improvements (minor features) and debug</h3>
         In reverse chronological order...
         <ul aria-live="off">
+            <li>[2024-10-21] (<a href="https://github.com/chamilo/chamilo-lms/commit/c7290daadb0ba87658509e172ef8f746f6e6f10e">c7290daa</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/5684">GH#5684</a>) Portfolio: Add missing steps for correct portfolio tool functionality</li>
+            <li>[2024-10-21] (<a href="https://github.com/chamilo/chamilo-lms/commit/ab6c21290d25fafdfd6c98a41e38beafe51d76fe">ab6c2129</a>) Exercise: Increase blurriness of text in reading comprehension questions (better resolutions make it possible to read)</li>
             <li>[2024-10-21] (<a href="https://github.com/chamilo/chamilo-lms/commit/d2772e4b19d99b23bacc438352270a61ca42fb4e">d2772e4b</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/5132">GH#5132</a>) Tracking: Add support for c_lp_item_view in notification icons on course homepage</li>
             <li>[2024-10-19] (<a href="https://github.com/chamilo/chamilo-lms/commit/40f0939d8f47ab5a82be4f28959cb6ad2919581a">40f0939d</a>) Internal: Bump version in version.php</li>
             <li>[2024-10-18] (<a href="https://github.com/chamilo/chamilo-lms/commit/ddd2b05a591d532b383b287165e77d2d048b4eb6">ddd2b05a</a> - <a href="https://task.beeznest.com/issues/21977">BT#21977</a>) Internal: Fix for 'setting_invalid_integer' error during Moodle 4 import</li>
