Documentation: Update changelog for 1.11.28

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -216,6 +216,7 @@
             <li>[2024-10-13] (<a href="https://github.com/chamilo/chamilo-lms/commit/5e9f2f0b6c5e7f66eb1a43bb381fb3485e515989">5e9f2f0b</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/4242">GH#4242</a>) Admin: Add configuration setting 'quiz_question_edit_open_advanced_params_by_default' to show questions advanced settings by default</li>
             <li>[2024-10-19] (<a href="https://github.com/chamilo/chamilo-lms/commit/c8748f86f8a409cbd1e1a7195bbcf8ff81a28cae">c8748f86</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/5543">GH#5543</a>) Admin: Add configuration setting 'session_visibility_after_end_date_options_configuration' to limit the visible session-visibility options</li>
             <li>[2024-10-19] (<a href="https://github.com/chamilo/chamilo-lms/commit/4fb383d07b3f313b9e09ca27eccb6eff3034a57a">4fb383d0</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/5191">GH#5191</a>) Admin: Add configuration setting 'hide_my_progress_tab' to hide the 'My Progress' tab</li>
+            <li>[2024-10-21] (<a href="https://github.com/chamilo/chamilo-lms/commit/615a5068a112a40f4649da9626e6e6605436708d">615a5068</a>) Internal: Bump PHP version from 7.2 to 7.4 in composer.json</li>
         </ul>
         <h3>Improvements (minor features) and debug</h3>
         In reverse chronological order...
